objects/EUR_CRM_PRS_Answer__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>EUR_CRM_PRS_Segmentation__r.EUR_CRM_Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRS Question</label>
        <referenceTo>EUR_CRM_PRS_Question__c</referenceTo>
        <relationshipLabel>PRS Answers (EU)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Segmentation__c</fullName>
        <label>PRS Segmentation</label>
        <referenceTo>EUR_CRM_PRS_Segmentation__c</referenceTo>
        <relationshipLabel>PRS Answers (EU)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Answer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>PRS Answer (EU)</label>
    <listViews>
        <fullName>EUR_BE_All_PRS_Answers_View</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Answer__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_PRS_Segmentation__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Answer__c.EUR_PRS_Answer_Volume_Potential</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Answer__c.EUR_PRS_Answer_Image_Level</value>
        </filters>
        <label>EUR BE All PRS Answers View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All_PRS_Answers_View</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Answer__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_PRS_Segmentation__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Answer__c.EUR_PRS_Answer_Brand_Building_Potential</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Answer__c.EUR_PRS_Answer_Business_Potential</value>
        </filters>
        <label>EUR BG All PRS Answers View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PRS-A-{0000000000}</displayFormat>
        <label>PRS Answer No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRS Answers (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_PRS_Answer_Brand_Building_Potential</fullName>
        <active>true</active>
        <label>EUR PRS Answer - Brand Building Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRS_Answer_Business_Potential</fullName>
        <active>true</active>
        <label>EUR PRS Answer - Business Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRS_Answer_Image_Level</fullName>
        <active>true</active>
        <label>EUR PRS Answer - Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRS_Answer_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR PRS Answer - Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRS_Answers</fullName>
        <active>true</active>
        <label>PRS Answer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>